<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leon.lamti.cc.animationAccount.LoginActivity"
    android:background="@color/colorPrimaryDark"
    android:visibility="visible"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <Button
        android:text="@string/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginLoginCB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:transitionName="loginTraName"
        android:background="@color/colorLoginCB"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailLoginCET"
        android:hint="@string/email"
        android:paddingLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/colorPrimary"
        android:backgroundTintMode="src_in"
        style="@style/Widget.AppCompat.TextView.SpinnerItem" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLoginCET"
        android:hint="@string/password"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginCET"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/emailLoginCET"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/colorPrimary"
        android:backgroundTintMode="src_in"
        style="@style/Widget.AppCompat.TextView.SpinnerItem" />

    <ImageView
        android:layout_width="230dp"
        android:layout_height="196dp"
        app:srcCompat="@drawable/brainmore_logo_l"
        android:id="@+id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginLoginCB"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginCET"
        app:layout_constraintVertical_bias="0.66" />

</android.support.constraint.ConstraintLayout>
