<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_the_sentences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leon.lamti.cc.games_activities.TheSentencesActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layoutS2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/final_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layoutS2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answerCL"
        android:textSize="28sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:visibility="gone"
        android:id="@+id/scoreTitleTV"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="10/10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scoreTitleTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answerCL"
        android:textSize="34sp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:visibility="gone"
        android:id="@+id/scoreTV"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="@string/errors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scoreTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answerCL"
        android:textSize="28sp"
        android:textColor="@color/colorRed"
        android:visibility="gone"
        android:id="@+id/errorsTV"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/errorsRV"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/errorsTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answerCL" />

    <TextView
        android:text="Protasi ena"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layoutS2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answerCL"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:visibility="visible"
        android:id="@+id/questionTV"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/answerCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/answerET"
            android:hint="@string/answer"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="@+id/answerFAB"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/answerFAB"
            app:layout_constraintBottom_toBottomOf="@+id/answerFAB"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/com_facebook_button_like_icon_selected"
            android:id="@+id/answerFAB"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backB"
            android:text="@string/back"
            android:visibility="gone"
            style="@style/MyButton"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/playAgainB"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playAgainB"
            android:text="@string/play_again"
            android:padding="8dp"
            android:visibility="gone"
            style="@style/MyButton"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/backB"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>
